--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
-{
+ {
   "name": "contractor-sourcing",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "migrate": "prisma migrate deploy",
-    "seed": "ts-node scripts/seed.ts"
-  },
+    "build": "prisma migrate deploy && next build",
+    "vercel-build": "prisma migrate deploy && prisma db seed || true && next build",
+    "start": "next start -p 3000",
+    "seed": "ts-node --transpile-only scripts/seed.ts",
+    "postinstall": "prisma generate"
+    }
+  ,
+
   "dependencies": {
     "@prisma/client": "5.4.1",
     "js-cookie": "^3.0.5",
