--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
- {
+{
   "name": "contractor-sourcing",
   "prisma": {
-   "seed": "ts-node --transpile-only ./scripts/seed.ts"
+    "seed": "ts-node --transpile-only ./scripts/seed.ts"
   },
   "version": "1.0.0",
   "private": true,
@@ -12,26 +12,26 @@
     "start": "next start -p 3000",
     "seed": "ts-node --transpile-only scripts/seed.ts",
     "postinstall": "prisma generate"
-    }
-  ,
-
+  },
   "dependencies": {
     "@prisma/client": "5.4.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.548.0",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^3.3.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.14",
     "autoprefixer": "10.4.14",
     "eslint": "8.52.0",
     "postcss": "8.4.24",
     "prisma": "5.4.1",
     "tailwindcss": "3.3.4",
     "ts-node": "10.9.1",
-    "typescript": "5.3.3",
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.14"
+    "typescript": "5.3.3"
   }
 }
