--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
- {
-  "name": "contractor-sourcing",
+{
   "prisma": {
-   "seed": "ts-node --transpile-only ./scripts/seed.ts"
+    "seed": "node ./scripts/seed.cjs"
   },
-  "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "prisma migrate deploy && next build",
     "vercel-build": "prisma migrate deploy && prisma db seed || true && next build",
     "start": "next start -p 3000",
-    "seed": "ts-node --transpile-only scripts/seed.ts",
+    "seed": "node ./scripts/seed.cjs",
     "postinstall": "prisma generate"
-    }
-  ,
-
+  },
   "dependencies": {
+    "@plasmicapp/loader-nextjs": "^1.0.442",
+    "@plasmicapp/react-web": "^0.2.405",
     "@prisma/client": "5.4.1",
     "js-cookie": "^3.0.5",
-    "next": "14.0.3",
+    "next": "^14.2.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.14",
     "autoprefixer": "10.4.14",
     "eslint": "8.52.0",
-    "postcss": "8.4.24",
+    "postcss": "^8.5.6",
     "prisma": "5.4.1",
     "tailwindcss": "3.3.4",
     "ts-node": "10.9.1",
-    "typescript": "5.3.3",
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.14"
+    "typescript": "5.3.3"
   }
 }
