--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "5.4.1",
     "js-cookie": "^3.0.5",
     "next": "^14.2.33",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.21.4"
